--- a/login/cadastro.html
+++ b/login/cadastro.html
@@ -6,11 +6,11 @@
     <title>Login</title>
   </head>
   <body>
-    <form action="" autocomplete="off">
+    <form autocomplete="off">
       <fieldset>
         <legend>Cadastre-se</legend>
 
-        <label for="">Usuário</label>
+        <label for="user">Usuário</label>
 
         <input
           type="text"
