--- a/login/index.html
+++ b/login/index.html
@@ -6,11 +6,11 @@
     <title>Login</title>
   </head>
   <body>
-    <form action="" autocomplete="off">
+    <form action="" autocomplete="on">
       <fieldset>
         <legend>Login</legend>
 
-        <label for="">Usuário</label>
+        <label for="user">Usuário</label>
 
         <input
           type="text"
