--- a/login/cadastro.html
+++ b/login/cadastro.html
@@ -6,11 +6,11 @@
     <title>Login</title>
   </head>
   <body>
-    <form autocomplete="off">
-      <fieldset>
-        <legend>Cadastre-se</legend>
+    <form action="#" method="get" autocomplete="off" class="form">
+      <fieldset class="fieldset_form">
+        <legend class="title_form">Cadastre-se</legend>
 
-        <label for="user">Usuário</label>
+        <label for="user" class="form__label">Usuário</label>
 
         <input
           type="text"
@@ -18,21 +18,29 @@
           name="user"
           required
           placeholder="Digite seu nome completo"
+          class="form__input"
         />
 
-        <label for="email">Email</label>
+        <label for="email" class="form__label">Email</label>
         <input
           type="email"
           id="email"
           name="email"
           required
           placeholder="cadastro@dominio.com.br"
+          class="form__input"
         />
 
-        <label for="password">Senha</label>
-        <input type="password" name="password" id="password" required />
+        <label for="password" class="form__label">Senha</label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          required
+          class="form__input"
+        />
         <div class="enviar">
-          <button type="submit" class="btn">Cadastre-se</button>
+          <input type="submit" class="btn btn__principal" value="Cadastre-se" />
           <p>Já possui cadatro? <a href="index.html">Faça Login</a></p>
         </div>
       </fieldset>
