Cadastro e Index HTML - atualizado posicionamento de link.

--- a/login/cadastro.html
+++ b/login/cadastro.html
@@ -40,8 +40,8 @@
           class="form__input"
         />
         <div class="enviar">
-          <input type="submit" class="btn btn__principal" value="Cadastre-se" />
           <p>Já possui cadatro? <a href="index.html">Faça Login</a></p>
+          <input type="submit" class="btn btn__principal" value="Cadastrar" />
         </div>
       </fieldset>
     </form>
