--- a/login/index.html
+++ b/login/index.html
@@ -33,12 +33,14 @@
         />
 
         <div class="enviar">
-          <input type="submit" class="btn btn__principal" value="Login" />
-
-          <a href="cadastro.html" target="_blank" class="btn btn__novo"
-            >Cadastre-se</a
-          >
           <a href="#" class="action__form__aside">Esqueci minha senha</a>
+          <div class="rowReverse">
+            <input type="submit" class="btn btn__principal" value="Login" />
+
+            <a href="cadastro.html" target="_blank" class="btn btn__novo"
+              >Cadastre-se</a
+            >
+          </div>
         </div>
       </fieldset>
     </form>
